# ranobe-downloader

./: .gitignore  Cargo.toml  README.md  config.py  config.yaml  esjNovel.py  requirements.txt
config/: config.yaml  template.yaml
src/: downloader.rs  main.rs
src/book/: book.rs  episode.rs  mod.rs  opf.rs  toc.rs
src/config/: config.rs  global.rs  mod.rs  template.rs
template/: titlepage.xhtml
