[package]
name = "ranobe-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = {version = "0.12.5", features = ["json","cookies"]}
tokio = { version = "1.38.1", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_yaml = "0.9"
serde_urlencoded = "0.7.1"
serde_xml = "0.9.1"
quick-xml = { version = "0.36.1", features = ["serde", "serialize"] }
once_cell = "1.19.0"
anyhow = "1.0.86"
scraper = "0.20.0"
md-5 = "0.10.6"
hex = "0.4.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
test-log = "0.2.16"
zip = "2.1.6"
walkdir = "2.5.0"